// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpellsTable render should work with all props 1`] = `
<div
  className="spells-table"
>
  <h2
    className="icon fa-magic"
  >
    Spells
  </h2>
  <div
    className="spells-table--search"
  >
    <div
      className="nice-control-group"
    >
      <span
        className="nice-input-addon"
      >
        Name
      </span>
      <input
        className="nice-form-control"
        disabled={undefined}
        id="name"
        onChange={[Function]}
        onKeyPress={null}
        placeholder="Name..."
        type="text"
        value=""
      />
    </div>
    <div
      className="nice-control-group"
    >
      <span
        className="nice-input-addon"
      >
        Class
      </span>
      <div
        className="nice-dropdown nice-form-control"
        defaultValue={Array []}
        id="classes"
      >
        <button
          className="nice-btn"
          onClick={[Function]}
        >
          All classes
          <i
            className="icon fa-angle-down"
          />
        </button>
        <ul
          className="dropdown-menu"
          onClick={[Function]}
        >
          <li
            className={null}
            data-value="Barbarian"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Barbarian
            </label>
          </li>
          <li
            className={null}
            data-value="Bard"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Bard
            </label>
          </li>
          <li
            className={null}
            data-value="Cleric"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Cleric
            </label>
          </li>
          <li
            className={null}
            data-value="Druid"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Druid
            </label>
          </li>
          <li
            className={null}
            data-value="Fighter"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Fighter
            </label>
          </li>
          <li
            className={null}
            data-value="Monk"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Monk
            </label>
          </li>
          <li
            className={null}
            data-value="Paladin"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Paladin
            </label>
          </li>
          <li
            className={null}
            data-value="Ranger"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Ranger
            </label>
          </li>
          <li
            className={null}
            data-value="Rogue"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Rogue
            </label>
          </li>
          <li
            className={null}
            data-value="Sorcerer"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Sorcerer
            </label>
          </li>
          <li
            className={null}
            data-value="Warlock"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Warlock
            </label>
          </li>
          <li
            className={null}
            data-value="Wizard"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Wizard
            </label>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="nice-control-group"
    >
      <span
        className="nice-input-addon"
      >
        Level
      </span>
      <div
        className="nice-dropdown nice-form-control"
        defaultValue={Array []}
        id="levels"
      >
        <button
          className="nice-btn"
          onClick={[Function]}
        >
          All levels
          <i
            className="icon fa-angle-down"
          />
        </button>
        <ul
          className="dropdown-menu"
          onClick={[Function]}
        >
          <li
            className={null}
            data-value="Cantrip"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Cantrip
            </label>
          </li>
          <li
            className={null}
            data-value="1"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Level 1
            </label>
          </li>
          <li
            className={null}
            data-value="2"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Level 2
            </label>
          </li>
          <li
            className={null}
            data-value="3"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Level 3
            </label>
          </li>
          <li
            className={null}
            data-value="4"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Level 4
            </label>
          </li>
          <li
            className={null}
            data-value="5"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Level 5
            </label>
          </li>
          <li
            className={null}
            data-value="6"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Level 6
            </label>
          </li>
          <li
            className={null}
            data-value="7"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Level 7
            </label>
          </li>
          <li
            className={null}
            data-value="8"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Level 8
            </label>
          </li>
          <li
            className={null}
            data-value="9"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Level 9
            </label>
          </li>
          <li
            className={null}
            data-value="10"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Level 10
            </label>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <table
    className="nice-table condensed bordered responsive"
  >
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Information
        </th>
        <th>
          Description
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        data-id={1}
      >
        <th
          className="spells-table--name"
        >
          Melf's Acid Arrow
          <div
            className="base-link-group nice-btn-group"
          >
            <a
              className="cursor-pointer nice-btn-alt icon fa-eye"
              href={undefined}
              onClick={[Function]}
            >
              View
            </a>
          </div>
        </th>
        <td
          className="spells-table--summary"
        >
          <ul
            className="nice-menu stacked"
          >
            <li>
              <strong>
                Level:
              </strong>
               
              2
            </li>
            <li>
              <strong>
                Casting time:
              </strong>
               
              1 action
            </li>
            <li>
              <strong>
                Duration:
              </strong>
               
              Instantaneous
            </li>
            <li>
              <strong>
                Concentration:
              </strong>
               
              No
            </li>
            <li>
              <strong>
                Range:
              </strong>
               
              <div
                className="reach inline"
              >
                90 feet
              </div>
            </li>
            <li>
              <strong>
                Cost:
              </strong>
               
              Some leaf
            </li>
            <li
              className="spells-table--properties"
            >
              <strong>
                Classes:
              </strong>
               
              <div
                className="list-label inline"
              >
                <div
                  className="tool-tip inline"
                >
                  Wizard
                  <span
                    className="tool-tip--content"
                  >
                    <p>
                      A scholarly magic-user capable of manipulating the structures of reality.
                    </p>
                  </span>
                </div>
              </div>
            </li>
          </ul>
        </td>
        <td
          className="spells-table--description"
        >
          <span>
            <p>
              A green arrow doing 
              <code>
                1d4
              </code>
            </p>
          </span>
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <td
          colSpan={3}
        />
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`SpellsTable render should work without props 1`] = `
<div
  className="spells-table"
>
  <h2
    className="icon fa-magic"
  >
    Spells
  </h2>
  <div
    className="spells-table--search"
  >
    <div
      className="nice-control-group"
    >
      <span
        className="nice-input-addon"
      >
        Name
      </span>
      <input
        className="nice-form-control"
        disabled={undefined}
        id="name"
        onChange={[Function]}
        onKeyPress={null}
        placeholder="Name..."
        type="text"
        value=""
      />
    </div>
    <div
      className="nice-control-group"
    >
      <span
        className="nice-input-addon"
      >
        Class
      </span>
      <div
        className="nice-dropdown nice-form-control"
        defaultValue={Array []}
        id="classes"
      >
        <button
          className="nice-btn"
          onClick={[Function]}
        >
          All classes
          <i
            className="icon fa-angle-down"
          />
        </button>
        <ul
          className="dropdown-menu"
          onClick={[Function]}
        >
          <li
            className={null}
            data-value="Barbarian"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Barbarian
            </label>
          </li>
          <li
            className={null}
            data-value="Bard"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Bard
            </label>
          </li>
          <li
            className={null}
            data-value="Cleric"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Cleric
            </label>
          </li>
          <li
            className={null}
            data-value="Druid"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Druid
            </label>
          </li>
          <li
            className={null}
            data-value="Fighter"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Fighter
            </label>
          </li>
          <li
            className={null}
            data-value="Monk"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Monk
            </label>
          </li>
          <li
            className={null}
            data-value="Paladin"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Paladin
            </label>
          </li>
          <li
            className={null}
            data-value="Ranger"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Ranger
            </label>
          </li>
          <li
            className={null}
            data-value="Rogue"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Rogue
            </label>
          </li>
          <li
            className={null}
            data-value="Sorcerer"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Sorcerer
            </label>
          </li>
          <li
            className={null}
            data-value="Warlock"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Warlock
            </label>
          </li>
          <li
            className={null}
            data-value="Wizard"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Wizard
            </label>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="nice-control-group"
    >
      <span
        className="nice-input-addon"
      >
        Level
      </span>
      <div
        className="nice-dropdown nice-form-control"
        defaultValue={Array []}
        id="levels"
      >
        <button
          className="nice-btn"
          onClick={[Function]}
        >
          All levels
          <i
            className="icon fa-angle-down"
          />
        </button>
        <ul
          className="dropdown-menu"
          onClick={[Function]}
        >
          <li
            className={null}
            data-value="Cantrip"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Cantrip
            </label>
          </li>
          <li
            className={null}
            data-value="1"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Level 1
            </label>
          </li>
          <li
            className={null}
            data-value="2"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Level 2
            </label>
          </li>
          <li
            className={null}
            data-value="3"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Level 3
            </label>
          </li>
          <li
            className={null}
            data-value="4"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Level 4
            </label>
          </li>
          <li
            className={null}
            data-value="5"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Level 5
            </label>
          </li>
          <li
            className={null}
            data-value="6"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Level 6
            </label>
          </li>
          <li
            className={null}
            data-value="7"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Level 7
            </label>
          </li>
          <li
            className={null}
            data-value="8"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Level 8
            </label>
          </li>
          <li
            className={null}
            data-value="9"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Level 9
            </label>
          </li>
          <li
            className={null}
            data-value="10"
          >
            <label>
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              Level 10
            </label>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <table
    className="nice-table condensed bordered responsive"
  >
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Information
        </th>
        <th>
          Description
        </th>
      </tr>
    </thead>
    <tbody />
    <tbody>
      <tr>
        <td
          colSpan={3}
        />
      </tr>
    </tbody>
  </table>
</div>
`;
